--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -24,9 +24,9 @@ concurrency:
 jobs:
   # Single deploy job since we're just deploying
   deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+# environment:
+#   name: github-pages
+#   url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -35,7 +35,6 @@ jobs:
         uses: actions/configure-pages@v5
         with:
           enablement: true
-
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
